[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yoorquezt-sdk-mev"
version = "1.0.0"
description = "YoorQuezt MEV SDK — Python client for Q MEV AI API and MEV Gateway"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["mev", "ethereum", "bundle", "flashbots", "yoorquezt"]
dependencies = [
  "httpx>=0.27",
  "websockets>=13.0",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-httpx"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
